# mentora-skills

./: .gitignore  INSTRUCTIONS.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: sync-team-repos.yml  validate.yml
config/: teams.yaml
mentora_skills/: __init__.py
mentora_skills/skills/: __init__.py
mentora_skills/skills/ai_explanation_critique/: skills.md
mentora_skills/skills/alt_designs/: logic.py
mentora_skills/skills/analytical_question_formulation/: skills.md
mentora_skills/skills/analyze_dist/: logic.py  skills.md
mentora_skills/skills/answer_error_diagnosis/: skills.md
mentora_skills/skills/apply_phon_rule/: logic.py  skills.md
mentora_skills/skills/ask_debug_aloud/: skills.md
mentora_skills/skills/ask_for_decomposition/: skills.md
mentora_skills/skills/ask_invariant/: logic.py  skills.md
mentora_skills/skills/asm_translation/: logic.py  skills.md
mentora_skills/skills/assembly_trace_reasoning/: skills.md
mentora_skills/skills/assumption_checking/: skills.md
mentora_skills/skills/author_choices/: logic.py
mentora_skills/skills/bigger_picture/: skills.md
mentora_skills/skills/bound_scope/: skills.md
mentora_skills/skills/c_debugger/: logic.py  skills.md
mentora_skills/skills/cache_modeling/: skills.md
mentora_skills/skills/cache_opt_code/: skills.md
mentora_skills/skills/cache_optimized_code/: logic.py  skills.md
mentora_skills/skills/cache_perf/: skills.md
mentora_skills/skills/calling_convention_reasoning/: skills.md
scripts/: import_skills.py  sync.py  validate_skill.py
(+172 files in other folders)
